--- a/packages/components/Printable/example/Example.html
+++ b/packages/components/Printable/example/Example.html
@@ -1,4 +1,4 @@
-<Printable ref:printable useDithering={true}>
+<Printable ref:printable useDithering={true} showPrintingDialog={false}>
   Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium esse possimus eaque harum, voluptatum optio hic. Dignissimos, molestias eligendi, cumque et eos iusto quasi mollitia fuga quam laudantium tempora aliquid?
   <br>
   <br>
