--- a/packages/styles/settings.pcss
+++ b/packages/styles/settings.pcss
@@ -3,9 +3,11 @@
 */
 
 /** Layers */
+$layer-keyboard: 900;
 $layer-dialog: 1000;
 $layer-appbar: 1100;
-$layer-dialog-fullscreen: 1101;
+$layer-keyboard-fullscreen: 1101;
+$layer-dialog-fullscreen: 1102;
 
 /** UI */
 $appbar-height: 38px;
